# UsefulCodes

./: .gitignore  benchmark.h  debug.h
AutomaticRuntimeCaller/: AutomaticRuntimeCaller.pro  Registrator.h
DataUnions/: CMakeLists.txt  main.cpp
Fastest isEven_isOdd/: main.cpp
FastestFileReader/: CMakeLists.txt  main.cpp
VirtualFunctionImitator/: CMakeLists.txt  main.cpp
VulkanTest/: CMakeLists.txt  main.cpp
isPowerOf2/: main.cpp
